test/errors/scope-resolution/redefinition/redefinition-def-with-public-use.1.good
redefinition-def-with-public-use.chpl:4: In module 'T2':
redefinition-def-with-public-use.chpl:6: error: 'a' has multiple definitions
redefinition-def-with-public-use.chpl:5: note: redefined through the 'use' of 'Lib1' here
redefinition-def-with-public-use.chpl:2: note: leading to the definition here
